bobcat (4.09.00)

  * The class Log unconditionally inserts level-free messages; level
    objects may be inserted anywhere in insertion statements.

  * The Log and level man pages were updated accordingly.

  * The class DateTime was completely rewritten, using a Pimpl approach using
    the this-pointer instead of a separate data member.

  * The members 'int pSync()', defined in IOStreambuf, LogBuffer,
    MultiStreambuf, OFdStreambuf, OFoldStreambuf, OHexStreambuf, Syslogbuf,
    and TableBuf are superfluous. They still exists (as private members), but
    throw an FBB::Exception{ 1 } when called, and are removed at the next
    major bobcat release. Man-pages were updated accordingly.

  * The member `std::streamsize pXsputn(...)' defined in IOStreambuf is
    superfluous. 

  * Overridding members declared as 'virtual' are now declared as 'override'.

  * Added the overriding members `xsputn' to OfdStreambuf and Syslogbuf

  * Updated the Pattern man-page

  * Internal headers include bobcat headers using "../classname/classname"
    instead of <bobcat/classname>.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 22 Jan 2019 20:59:27 +0100

bobcat (4.08.06)

  * Added Exception::factory members returning stream objects, added
    Exception::open members accepting two ios::openmode arguments.

  * Repaired flaws in man-pages.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 17 Dec 2018 09:44:20 +0100
 
bobcat (4.08.05)

  * [[fallthrough]] requires a final semicolon (cf. C++ std 20, 10.6.5).
    Bobcat's code is fixed accordingly.

  * The BigInt::diophantus members do not require a BigInt object, and are now
    defined as static members.

  * Stat declares a default copy constructor, as it defines a move
    constructor. 

  * Superfluous 'return 0;' statements removed from source files and
    man-pages. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 26 Sep 2018 13:33:52 +0200

bobcat (4.08.04)

  * Migrated from Github to Gitlab.
