@@ -28,12 +28,14 @@ manpagesection(CONSTRUCTORS)
     itemization(
     itb(Classname())
     )
+
     The copy and move constructors are available.
 
 manpagesection(OVERLOADED OPERATORS)
     itemization(
     itb()
     )
+
     The copy and move assignment operators are available.
 
 manpagesection(MEMBER FUNCTIONS)
