@@ -1,0 +1,4 @@
+#include "mxstream.ih"
+
+recursive_mutex MxStream::Out::s_mutex;
+
