@@ -1,0 +1,6 @@
+#include "mxstream.ih"
+
+MxStream::Out::~Out()
+{
+    s_mutex.unlock();
+}
