@@ -1,0 +1,5 @@
+#include "mxstream.ih"
+
+MxStream::
+{
+}
