@@ -1,0 +1,3 @@
+#define LIBRARY             "mxstream"
+
+#include "../icmconf"
