@@ -1,0 +1,9 @@
+#include "mxstream"
+
+//#include <iostream>
+//#define XERR std::cerr << __FILE__": "
+
+
+using namespace std;
+using namespace FBB;
+
