@@ -1,0 +1,4 @@
+inline MxStream::MxStream(std::ostream &out)
+:
+    d_out(out)
+{}
