@@ -1,0 +1,4 @@
+inline MxStream::Out MxStream::ostream() const
+{
+    return MxStream::Out{ *this };
+}
