@@ -1,0 +1,4 @@
+inline MxStream::Out::Out(Out &&tmp)
+:
+    std::ostream(tmp.rdbuf())
+{}
