@@ -1,3 +1,7 @@
+bobcat (4.10.00)
+
+  * Added class MxStream for mutex protected ostream operations.
+
 bobcat (4.09.00)
 
   * The class Log unconditionally inserts level-free messages; level
